objects/signaturit__SignatureRequest__c.object
<CustomObject>
    <fields>
        <fullName>signaturit__APIError__c</fullName>
        <description>Stores API error response if any</description>
        <inlineHelpText>Stores API error response if any</inlineHelpText>
        <label>API error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>signaturit__Archive_Content__c</fullName>
        <label>Archive Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>signaturit__Attachment_Name__c</fullName>
        <label>Attachment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__Attachment_Type__c</fullName>
        <label>Attachment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Select</fullName>
                </value>
                <value>
                    <fullName>template</fullName>
                    <label>Select Template</label>
                </value>
                <value>
                    <fullName>selectPDF</fullName>
                    <label>Select PDF Document</label>
                </value>
                <value>
                    <fullName>create</fullName>
                    <label>Create new PDF Document</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>signaturit__AuditTrailAttachmentId__c</fullName>
        <label>Audit Trail Attachment Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__AuditTrailURL__c</fullName>
        <formula>IF(LOWER(TEXT(signaturit__Status__c)) == LOWER($Label.signaturit__SIG_StatusCompleted),
     IF(ISBLANK(signaturit__AuditTrailAttachmentId__c),
        HYPERLINK(&apos;/apex/SIG_PdfViewer?documentType=audit_trail&amp;documentId=&apos;+ signaturit__SignaturitId__c , &apos;Link&apos; , &apos;_blank&apos;),
        HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos;+ signaturit__AuditTrailAttachmentId__c, &apos;Link&apos; , &apos;_blank&apos;)
     ), $Label.signaturit__SIG_NotAvailable)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit Trail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__BackToParent__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+signaturit__ParentId__c, &apos;Back to record&apos;, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Back to parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__Body__c</fullName>
        <label>Body</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>signaturit__CompletedCount__c</fullName>
        <formula>IF( signaturit__Progress__c == &apos;Completed&apos;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>signaturit__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Signature requests</relationshipLabel>
        <relationshipName>Signature_requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>signaturit__CreatedMonthYear__c</fullName>
        <formula>TEXT(YEAR( DATEVALUE(CreatedDate) )) &amp; &apos;/&apos; &amp; TEXT(MONTH(DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Month Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__Debug__c</fullName>
        <description>Stores debug information for further troubleshooting</description>
        <inlineHelpText>Stores debug information for further troubleshooting</inlineHelpText>
        <label>Debug log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>signaturit__DeliveryType__c</fullName>
        <description>Delivery type for the signature request</description>
        <inlineHelpText>Delivery type for the signature request</inlineHelpText>
        <label>Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>email</fullName>
                </value>
                <value>
                    <fullName>sms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>signaturit__EndUserError__c</fullName>
        <description>Error to show by user</description>
        <label>End User Error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>signaturit__Expiration__c</fullName>
        <description>Set expiration</description>
        <inlineHelpText>Set expiration</inlineHelpText>
        <label>Expiration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <label>Dont expire</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Expire</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>signaturit__Expiration_date__c</fullName>
        <defaultValue>0</defaultValue>
        <description>If expiration is set, the number of days to expiration</description>
        <inlineHelpText>If expiration is set, the number of days to expiration</inlineHelpText>
        <label>Days to Expiration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>signaturit__Last_Status_Date__c</fullName>
        <label>Last Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>signaturit__MinutesToSign__c</fullName>
        <formula>(signaturit__Last_Status_Date__c - CreatedDate) * 24 * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minutes To Sign</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>signaturit__NumberCancelDocuments__c</fullName>
        <description>Number of cancel signatures</description>
        <inlineHelpText>Number of cancel signatures</inlineHelpText>
        <label>Number Cancel Signatures</label>
        <summarizedField>signaturit__SignatureRequestSigner__c.signaturit__NumberCancelDocuments__c</summarizedField>
        <summaryForeignKey>signaturit__SignatureRequestSigner__c.signaturit__SignatureRequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>signaturit__NumberCompletedDocuments__c</fullName>
        <description>Number of completed signatures</description>
        <inlineHelpText>Number of completed signatures</inlineHelpText>
        <label>Number Completed Signatures</label>
        <summarizedField>signaturit__SignatureRequestSigner__c.signaturit__NumberCompletedDocuments__c</summarizedField>
        <summaryForeignKey>signaturit__SignatureRequestSigner__c.signaturit__SignatureRequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>signaturit__NumberDocuments__c</fullName>
        <description>Number of signatures</description>
        <inlineHelpText>Number of signatures</inlineHelpText>
        <label>Number Signatures</label>
        <summarizedField>signaturit__SignatureRequestSigner__c.signaturit__NumberDocuments__c</summarizedField>
        <summaryForeignKey>signaturit__SignatureRequestSigner__c.signaturit__SignatureRequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>signaturit__ParentId__c</fullName>
        <label>Parent Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__ParentLink__c</fullName>
        <description>Link to the parent record</description>
        <formula>HYPERLINK(&apos;/&apos; &amp; signaturit__ParentId__c, signaturit__ParentName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to the parent record</inlineHelpText>
        <label>Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__ParentName__c</fullName>
        <description>Parent record&apos;s name</description>
        <inlineHelpText>Parent record&apos;s name</inlineHelpText>
        <label>Parent Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>signaturit__Progress__c</fullName>
        <formula>IF( signaturit__NumberCompletedDocuments__c == signaturit__NumberDocuments__c ,  $Label.signaturit__SIG_StatusCompleted , IF( signaturit__NumberCancelDocuments__c &gt;= 1 ,  $Label.signaturit__SIG_StatusCanceled ,  $Label.signaturit__SIG_StatusInProgress ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__Recipient_Email__c</fullName>
        <label>Recipient Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__Recipient_Name__c</fullName>
        <label>Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__Reminder__c</fullName>
        <description>When to send reminders</description>
        <inlineHelpText>When to send reminders</inlineHelpText>
        <label>Reminder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Custom</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Weekly</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Daily</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Never</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>signaturit__Reminder_days__c</fullName>
        <description>If the reminders are custom, the days that will elapse until the reminder is sent</description>
        <inlineHelpText>If the reminders are custom, the days that will elapse until the reminder is sent</inlineHelpText>
        <label>Reminder Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>signaturit__Rich_Body__c</fullName>
        <description>Rich text body for the email sent</description>
        <inlineHelpText>Rich text body for the email sent</inlineHelpText>
        <label>Rich Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>signaturit__SaveAuditTrailInSalesforce__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether audit trail from Signaturit should be stored in Salesforce</description>
        <inlineHelpText>Whether audit trail from Signaturit should be stored in Salesforce</inlineHelpText>
        <label>Save Audit Trail in Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>signaturit__SaveSignedInSalesforce__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whther signed document should be stored in Salesforce</description>
        <inlineHelpText>Whether signed document should be stored in Salesforce</inlineHelpText>
        <label>Save Signed in Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>signaturit__SaveType__c</fullName>
        <description>Where to save the files in Salesforce (as files or as attachments)</description>
        <inlineHelpText>Where to save the files in Salesforce (as files or as attachments)</inlineHelpText>
        <label>Save type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>File</fullName>
                </value>
                <value>
                    <fullName>Attachment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>signaturit__SignType__c</fullName>
        <description>Signing type for the request</description>
        <inlineHelpText>Signing type for the request</inlineHelpText>
        <label>Sign Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>sequential</fullName>
                    <label>Secuential</label>
                </value>
                <value>
                    <fullName>parallel</fullName>
                    <label>Parallel</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>signaturit__SignatureType__c</fullName>
        <description>Signature type to use in the process</description>
        <inlineHelpText>Signature type to use in the process</inlineHelpText>
        <label>Signature Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>simple</fullName>
                </value>
                <value>
                    <fullName>advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>signaturit__SignaturitDocumentId__c</fullName>
        <label>Signaturit Document Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__SignaturitId__c</fullName>
        <label>Signaturit Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__SignedDocumentAttachmentId__c</fullName>
        <label>Signed Document Attachment Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__SignedDocumentURL__c</fullName>
        <formula>IF(LOWER(TEXT(signaturit__Status__c)) == LOWER($Label.signaturit__SIG_StatusCompleted),
IF(ISBLANK(signaturit__SignedDocumentAttachmentId__c),
HYPERLINK(&apos;/apex/SIG_PdfViewer?documentType=signed&amp;documentId=&apos;+ signaturit__SignaturitId__c , &apos;Link&apos; , &apos;_blank&apos;),
HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos;+ signaturit__SignedDocumentAttachmentId__c, &apos;Link&apos; , &apos;_blank&apos;)
),$Label.signaturit__SIG_NotAvailable)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signed Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>in_queue</fullName>
                    <default>true</default>
                    <label>In queue</label>
                </value>
                <value>
                    <fullName>ready</fullName>
                    <label>Ready</label>
                </value>
                <value>
                    <fullName>signing</fullName>
                    <label>Signing</label>
                </value>
                <value>
                    <fullName>completed</fullName>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>expired</fullName>
                    <label>Expired</label>
                </value>
                <value>
                    <fullName>canceled</fullName>
                    <label>Canceled</label>
                </value>
                <value>
                    <fullName>declined</fullName>
                    <label>Declined</label>
                </value>
                <value>
                    <fullName>error</fullName>
                    <label>Error</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>signaturit__Subject__c</fullName>
        <description>Subject of the request</description>
        <inlineHelpText>Subject of the request</inlineHelpText>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__UseSMSOTP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If SMS OTP should be used</description>
        <inlineHelpText>If SMS OTP should be used</inlineHelpText>
        <label>Use SMS OTP</label>
        <type>Checkbox</type>
    </fields>
    <label>Solicitud de Firma</label>
    <listViews>
        <fullName>signaturit__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>signaturit__ParentId__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>signaturit__All1</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>RECORDTYPE</columns>
        <columns>signaturit__SignType__c</columns>
        <columns>signaturit__Status__c</columns>
        <columns>signaturit__Subject__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>signaturit__Progress__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>signaturit__SignaturitId__c</columns>
        <columns>signaturit__Expiration__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>signaturit__InProgress</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>signaturit__Expiration__c</columns>
        <columns>signaturit__Expiration_date__c</columns>
        <columns>signaturit__Last_Status_Date__c</columns>
        <columns>signaturit__NumberDocuments__c</columns>
        <columns>signaturit__Progress__c</columns>
        <columns>signaturit__SignType__c</columns>
        <columns>signaturit__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>signaturit__Status__c</field>
            <operation>contains</operation>
            <value>In queue,Ready,Signing</value>
        </filters>
        <filters>
            <field>signaturit__Status__c</field>
            <operation>contains</operation>
            <value>En cola,Listo,Firmando</value>
        </filters>
        <label>InProgress</label>
    </listViews>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solicitudes de Firma</pluralLabel>
    <recordTypes>
        <fullName>signaturit__Multiple</fullName>
        <active>true</active>
        <description>Signature request targeting multiple signers and documents (v2)</description>
        <label>Multiple</label>
    </recordTypes>
    <recordTypes>
        <fullName>signaturit__Simple</fullName>
        <active>true</active>
        <description>Simple signature request. For Salesforce classic (v1)</description>
        <label>Simple</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>